force-app/main/default/objects/CCountry__c/CCountry__c.object-meta.xml
<CustomObject>
    <description>custom objrcty whiuc imic  the REST Country  field structure</description>
    <label>CCountry</label>
    <nameField>
        <label>CCountry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCountries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>