force-app/main/default/objects/CCountry__c/fields/CountryCode2__c.field-meta.xml
<CustomField>
    <fullName>CountryCode2__c</fullName>
    <externalId>true</externalId>
    <label>CountryCode2</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>