force-app/main/default/objects/CCountry__c/fields/RegionalBlock__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlock__c</fullName>
    <label>RegionalBlock</label>
    <length>20</length>
    <type>Text</type>
</CustomField>