force-app/main/default/objects/CCountry__c/fields/SubRegion__c.field-meta.xml
<CustomField>
    <fullName>SubRegion__c</fullName>
    <label>SubRegion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>