force-app/main/default/objects/CCountry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CountryCode2__c</columns>
    <columns>CountryCode3__c</columns>
    <columns>Region__c</columns>
    <columns>SubRegion__c</columns>
    <columns>RegionalBlock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>